[package]
name = "tokio-scheduler-rs"
version = "1.1.6"
edition = "2021"
description = "Yet Another JobScheduler written with tokio runtime, automatic retry, hook and custom storage supported."
license = "MIT"
documentation = "https://docs.rs/tokio-scheduler-rs"
homepage = "https://github.com/whl2606555/tokio-scheduler-rs"
repository = "https://github.com/whl2606555/tokio-scheduler-rs"
readme = "README.MD"

[dependencies]
serde_json = "^1"
serde = "^1"
uuid = { version = "^1", features = ["v4", "fast-rng"] }
cron = "^0"
chrono = "^0"
tokio = { version = "^1", features = ["full"] }
once_cell = "^1"
async-trait = "^0"
futures = "^0"
dashmap = { version = "^5" }
log = "^0"
anyhow = "^1"
parking_lot = "^0"

[dev-dependencies]
chrono-tz = "^0"
