[package]
name = "tokio-scheduler-rs"
version = "2.0.0"
edition = "2021"
description = "Yet Another JobScheduler written with tokio runtime, automatic retry, hook and custom storage supported."
license = "MIT"
documentation = "https://docs.rs/tokio-scheduler-rs"
homepage = "https://github.com/RecordingTheSmile/tokio-scheduler-rs"
repository = "https://github.com/RecordingTheSmile/tokio-scheduler-rs"
readme = "README.MD"

[workspace]
members = [".", "tokio-scheduler-macro", "tokio-scheduler-types"]

[dependencies]
serde_json = "^1"
serde = "^1"
uuid = { version = "^1", features = ["v4", "fast-rng"] }
cron = "^0"
chrono = "^0"
tokio = { version = "^1", features = ["full"] }
async-trait = "^0"
dashmap = { version = "^6" }
anyhow = "^1"
parking_lot = "^0"
tracing = "^0"
tokio-util = "^0"
tokio-scheduler-types = { path = 'tokio-scheduler-types' }
tokio-scheduler-macro = { path = 'tokio-scheduler-macro' }
inventory = "^0"

[dev-dependencies]
chrono-tz = "^0"
