[package]
name = "tokio-scheduler-types"
version = "2.0.0"
edition = "2021"
description = "Types for tokio-scheduler-rs"
license = "MIT"
readme = "README.MD"

[dependencies]
tokio = { version = "^1", features = [] }
tokio-util = "^0"
async-trait = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
cron = "^0"
inventory = "^0"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }